--- a/Walkies Website/eCommerceAssets/styles/eCommerceStyle.css
+++ b/Walkies Website/eCommerceAssets/styles/eCommerceStyle.css
@@ -38,7 +38,7 @@ header {
 	font-size: 14px;
 }
 /* Offer text banner*/
-#offer {
+#home_first {
 	font-family: 'Montserrat', sans-serif;
 	clear: both;
 	background-color: rgba(1,185,0,1.00);
@@ -49,7 +49,7 @@ header {
 	width: 510px;
 }
 
-#secondoffer {
+#home_second {
 	font-family: 'Montserrat', sans-serif;
 	background-color: rgba(77,94,77,1.00);
 	color: rgba(255,255,255,1.00);
@@ -59,7 +59,18 @@ header {
 	margin-left: 660px;
 	text-align: right;
 	padding-right: 50px;
-	margin-top: -217px;
+	margin-top: -219px;
+}
+#shelter {
+	font-family: 'Montserrat', sans-serif;
+	clear: both;
+	background-color: rgba(1,185,0,1.00);
+	color: rgba(255,255,255,1.00);
+	padding-top: 4px;
+	padding-bottom: 70px;
+	width: 1220px;
+	text-align: center;
+	height: 0px;
 }
 /* Main content of the site */
 #content {
