Dependency Injection works, Edit page created for Shelter in Admin page Still need to create dropdown to link directly to Shelter list and alter the index page to use Datatables

--- a/Walkies.Admin/Views/Shelter/Index.cshtml
+++ b/Walkies.Admin/Views/Shelter/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Walkies.Admin.Models.Shelter>
+﻿@model IEnumerable<Walkies.Common.Models.Shelter>
 
 @{
     ViewData["Title"] = "Index";
