--- a/Walkies Website/eCommerceAssets/styles/eCommerceStyle.css
+++ b/Walkies Website/eCommerceAssets/styles/eCommerceStyle.css
@@ -1,16 +1,19 @@
 @charset "utf-8";
 /* Global Styles */
 a:hover {
-	color: rgba(255,255,255,1.00);
+	color: rgba(0,0,0,1.00);
 }
-#home_first h2 a {
+#home_first h1 a {
 	color: rgba(255,255,255,1.00);
+	text-align: center;
+	text-decoration: none;
 
 }
-#home_second h2 a {
+#home_second h1 a {
 	color: rgba(255,255,255,1.00);
+	text-decoration: none;
 }
-#home_first h2 a:hover {
+#home_first h1 a:hover {
 	color: rgba(0,0,0,1.00);
 }
 
@@ -24,7 +27,7 @@ header {
 	font-style: normal;
 	font-weight: 400;
 }
-#home_second h2 a:hover {
+#home_second h1 a:hover {
 	color: rgba(0,0,0,1.00);
 }
 
@@ -64,6 +67,7 @@ header {
 	padding-top: 57px;
 	padding-bottom: 57px;
 	width: 45%;
+	text-align: center;
 }
 
 #home_second {
@@ -73,7 +77,7 @@ header {
 	padding-top: 57px;
 	padding-bottom: 57px;
 	width: 45%;
-	text-align: right;
+	text-align: center;
 	padding-right: 50px;
 	margin-top: -219px;
 	float: right;
@@ -130,7 +134,35 @@ header {
 	background-color: rgba(112,112,112,1.00);
 	padding-top: 36px;
 	height: 310px;
+	padding-bottom: 28px;
 }
+form .form-group #name {
+	text-align: center;
+}
+form .form-group #name2 {
+	text-align: center;
+}
+form .form-group #Email {
+	text-align: center;
+}
+form .form-group #Phone {
+	text-align: center;
+}
+form .form-group #password {
+	text-align: center;
+}
+#menubar .menu h5 {
+	color: rgba(255,255,255,1.00);
+}
+#home_first h2 a {
+}
+
+
+
+
+
+
+
 /* main content of the site */
 #content .mainContent {
 	float: left;
