A series of font size changes

--- a/Walkies Website/eCommerceAssets/styles/eCommerceStyle.css
+++ b/Walkies Website/eCommerceAssets/styles/eCommerceStyle.css
@@ -79,7 +79,7 @@ header {
 	width: 45%;
 	text-align: center;
 	padding-right: 50px;
-	margin-top: -219px;
+	margin-top: -225px;
 	float: right;
 }
 #shelter {
@@ -567,3 +567,17 @@ header #headerLinks a {
 #image_logo{
 	text-align: center;
 }
+
+.google-maps {
+        position: relative;
+        padding-bottom: 75%;
+        height: 0;
+        overflow: hidden;
+    }
+.google-maps iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100% !important;
+        height: 100% !important;
+    }
