--- a/Walkies_Android/Resources/layout/Search.axml
+++ b/Walkies_Android/Resources/layout/Search.axml
@@ -1,20 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:p1="http://schemas.android.com/apk/res/android"
-    p1:minWidth="25px"
-    p1:minHeight="25px"
-    p1:layout_width="match_parent"
-    p1:layout_height="wrap_content"
-    p1:id="@+id/gridLayout1">
-    <ImageButton
-        p1:src="@android:drawable/ic_menu_gallery"
-        p1:id="@+id/imageButton1" />
-    <ImageButton
-        p1:src="@android:drawable/ic_menu_gallery"
-        p1:id="@+id/imageButton2" />
-    <ImageButton
-        p1:src="@android:drawable/ic_menu_gallery"
-        p1:id="@+id/imageButton3" />
-    <ImageButton
-        p1:src="@android:drawable/ic_menu_gallery"
-        p1:id="@+id/imageButton4" />
-</GridLayout>
+<LinearLayout xmlns:p1="http://schemas.android.com/apk/res/android"
+    p1:orientation="vertical"
+    p1:layout_width="fill_parent"
+    p1:layout_height="fill_parent"
+    p1:id="@+id/linearLayout1">
+    <LinearLayout
+        p1:orientation="horizontal"
+        p1:minWidth="25px"
+        p1:minHeight="25px"
+        p1:layout_width="match_parent"
+        p1:layout_height="37.5dp"
+        p1:id="@+id/linearLayout5">
+        <Button
+            p1:text="Profile"
+            p1:layout_width="wrap_content"
+            p1:layout_height="match_parent"
+            p1:id="@+id/Profile"
+            p1:layout_marginLeft="7.5dp" />
+        <Button
+            p1:text="Logout"
+            p1:layout_width="194.5dp"
+            p1:layout_height="match_parent"
+            p1:id="@+id/Logout" />
+        <Button
+            p1:text="Nothing"
+            p1:id="@+id/Map"
+            p1:layout_width="wrap_content"
+            p1:layout_height="match_parent" />
+    </LinearLayout>
+    <LinearLayout
+        p1:orientation="horizontal"
+        p1:minWidth="25px"
+        p1:minHeight="25px"
+        p1:layout_width="match_parent"
+        p1:layout_height="371.5dp"
+        p1:id="@+id/linearLayout4"
+        p1:layout_marginBottom="23.5dp">
+        <ImageView
+            p1:src="@android:drawable/ic_menu_gallery"
+            p1:layout_width="358.0dp"
+            p1:layout_height="385.5dp"
+            p1:id="@+id/DogImage"
+            p1:layout_marginRight="0.0dp"
+            p1:paddingLeft="@android:dimen/dialog_min_width_minor"
+            p1:layout_marginLeft="13.5dp"
+            p1:layout_marginBottom="0.0dp" />
+    </LinearLayout>
+    <TextView
+        p1:text="Dog Name, Breed, Distance"
+        p1:textAppearance="?android:attr/textAppearanceLarge"
+        p1:layout_width="match_parent"
+        p1:layout_height="wrap_content"
+        p1:id="@+id/DogInfo" />
+    <LinearLayout
+        p1:orientation="horizontal"
+        p1:minWidth="25px"
+        p1:minHeight="25px"
+        p1:layout_width="match_parent"
+        p1:layout_height="match_parent"
+        p1:id="@+id/linearLayout2"
+        p1:paddingEnd="25px"
+        p1:paddingLeft="80px"
+        p1:showDividers="middle"
+        p1:layout_marginTop="0.0dp">
+        <Button
+            p1:text="Book"
+            p1:layout_width="wrap_content"
+            p1:layout_height="match_parent"
+            p1:id="@+id/BookPage" />
+        <Button
+            p1:text="Profile"
+            p1:layout_width="141.0dp"
+            p1:layout_height="match_parent"
+            p1:id="@+id/ViewProfile"
+            p1:layout_marginRight="2.5dp" />
+        <Button
+            p1:text="Next"
+            p1:layout_width="wrap_content"
+            p1:layout_height="match_parent"
+            p1:id="@+id/LoadNext" />
+    </LinearLayout>
+</LinearLayout>
