Walkies.Admin fully operational. Allows Shelters to be added/edited/deleted Dogs are listed by shelter which can also be added/edited/deleted

--- a/Walkies.Admin/Views/Shelter/Edit.cshtml
+++ b/Walkies.Admin/Views/Shelter/Edit.cshtml
@@ -80,9 +80,9 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label asp-for="StateCode" class="control-label col-md-2"></label>
+                    <label class="control-label col-md-2">State</label>
                     <div class="col-md-4">
-                        <select input asp-for="StateCode" class="form-control" required>
+                        <select asp-for="StateCode" class="form-control" required>
                             <option selected disabled="disabled">Select State</option>
                             <option value="AL">Alabama</option>
                             <option value="AK">Alaska</option>
