--- a/Walkies.Web/Views/Map/DogWalker.cshtml
+++ b/Walkies.Web/Views/Map/DogWalker.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Homepage - Walkies";
+    ViewData["Title"] = "DogWalker - Walkies";
 }
 <html>
 <head>
@@ -16,28 +16,16 @@
     <div id="mainWrapper">
         <header>
             <!-- This is the header content. It contains Logo and links -->
-            <div id="headerLinks"><strong><a href="@Url.Content("~/Account/Profile")">Profile</a></strong></div>
-        </header>
-        <section id="doggo_logo"></section>
-        <section id="image_logo">
+
+            <div id="headerLinks"><a href="@Url.Content("~/Account/LoginRegister")">Login/Register</a><a href="@Url.Content("~/Account/Profile")">Profile</a></div>
             <a href="@Url.Content("~/Home/Index")">
-                <img src="@Url.Content("~/Images/DoggoLogo.png")" width="350" height="348" alt="" /><img src="@Url.Content("~/Images/TextLogo.png")" width="400" height="317" alt="" />
+                <img src="@Url.Content("~/Images/TextLogo.png")" width="200" height="164" alt="" />
             </a>
+        </header>
+        <section id="map">
+            <!-- The offer section displays a banner text for promotions -->
+            <h2>Walker Tracker </h2>
         </section>
-        <a href="@Url.Content("~/Map/MapPage")" id="home_first">
-            <section id="home_first2">
-                <!-- The offer section displays a banner text for promotions -->
-                <h1>Map</h1>
-                <h4>Find a Shelter Near You</h4>
-            </section>
-        </a>
-        <a href="@Url.Content("~/Shelter/Shelter")" id="home_second">
-            <section>
-                <!-- The offer section displays a banner text for promotions -->
-                <h1>Shelter</h1>
-                <h4>Reserve a Dog to Walk at a Shelter Near You</h4>
-            </section>
-        </a>
         <div id="navbar">
             <ul>
                 <li><a href="@Url.Content("~/Home/Index")">Home</a></li>
@@ -48,7 +36,7 @@
         </div>
 
         <div id="content">
-            <section class="sidebar_Home">
+            <section class="sidebar">
                 <!-- This adds a sidebar with 1 searchbox,2 menusets, each with 4 links -->
                 <!--<input type="text"  id="search" value="search">-->
                 <div id="menubar">
@@ -92,6 +80,7 @@
                             </a>
                         </form>
 
+
                         <ul>
                             <!-- List of links under menuset 1 -->
                             <!--<li><a href="#" title="Link">Link 1</a></li>
@@ -103,9 +92,11 @@
 
                 </div>
             </section>
-            <footer><a href="@Url.Content("~/Home/Help")">Help</a></footer>
-
+            <div class="google-maps">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.863682909094!2d-111.84830038433226!3d40.765022842306465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87525f8d9a1c0b85%3A0xaa04b77f6d1b2c25!2s200+Central+Campus+Dr%2C+Salt+Lake+City%2C+UT+84112!5e0!3m2!1sen!2sus!4v1536447531479" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
         </div>
+        <footer><a href="@Url.Content("~/Home/Help")">Help</a></footer>
         <!--<footer>
           <!-- This is the footer with default 3 divs -->
         <!--<div>
@@ -123,4 +114,3 @@
     </div>
 </body>
 </html>
-
