--- a/Walkies.Web/Views/Shared/_Layout.cshtml
+++ b/Walkies.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@*<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -40,9 +40,9 @@
 
     <partial name="_CookieConsentPartial" />
 
-    <div class="container body-content">
+    <div class="container body-content">*@
         @RenderBody()
-        <hr />
+        @*<hr />
         <footer>
             <p>&copy; 2018 - Walkies.Admin</p>
         </footer>
@@ -71,4 +71,4 @@
 
     @RenderSection("Scripts", required: false)
 </body>
-</html>
+</html>*@
