Improved naming convention for paths in Map and Shelter

--- a/Walkies.Web/Views/Account/Profile.cshtml
+++ b/Walkies.Web/Views/Account/Profile.cshtml
@@ -23,13 +23,13 @@
                 <img src="@Url.Content("~Images/DoggoLogo.png")" width="350" height="348" alt="" /><img src="@Url.Content("~Images/TextLogo.png")" width="400" height="317" alt="" />
             </a>
         </section>
-        <a href="@Url.Content("~/Map/MapPage")" id="home_first">  </a>
+        <a href="@Url.Content("~/Map/Index")" id="home_first">  </a>
 
         <div id="navbar">
             <ul>
                 <li><a href="@Url.Content("~/Home/Index")">Home</a></li>
-                <li><a href="@Url.Content("~/Shelter/Shelter")">Shelter</a></li>
-                <li><a href="@Url.Content("~/Map/MapPage")">Map</a></li>
+                <li><a href="@Url.Content("~/Shelter/Index")">Shelter</a></li>
+                <li><a href="@Url.Content("~/Map/Index")">Map</a></li>
                 <li><a href="@Url.Content("~/Map/DogWalker")">Walker Tracker</a></li>
             </ul>
         </div>
