--- a/Walkies.Web/Views/Home/Index.cshtml
+++ b/Walkies.Web/Views/Home/Index.cshtml
@@ -24,14 +24,14 @@
                 <img src="@Url.Content("~/Images/DoggoLogo.png")" width="350" height="348" alt="" /><img src="@Url.Content("~/Images/TextLogo.png")" width="400" height="317" alt="" />
             </a>
         </section>
-        <a href="@Url.Content("~/Map/MapPage")" id="home_first">
+        <a href="@Url.Content("~/Map/Index")" id="home_first">
             <section id="home_first2">
                 <!-- The offer section displays a banner text for promotions -->
                 <h1>Map</h1>
                 <h4>Find a Shelter Near You</h4>
             </section>
         </a>
-        <a href="@Url.Content("~/Shelter/Shelter")" id="home_second">
+        <a href="@Url.Content("~/Shelter/Index")" id="home_second">
             <section>
                 <!-- The offer section displays a banner text for promotions -->
                 <h1>Shelter</h1>
@@ -41,8 +41,8 @@
         <div id="navbar">
             <ul>
                 <li><a href="@Url.Content("~/Home/Index")">Home</a></li>
-                <li><a href="@Url.Content("~/Shelter/Shelter")">Shelter</a></li>
-                <li><a href="@Url.Content("~/Map/MapPage")">Map</a></li>
+                <li><a href="@Url.Content("~/Shelter/Index")">Shelter</a></li>
+                <li><a href="@Url.Content("~/Map/Index")">Map</a></li>
                 <li><a href="@Url.Content("~/Map/DogWalker")">Walker Tracker</a></li>
             </ul>
         </div>
