--- a/Walkies.Web/Views/Map/DogWalker.cshtml
+++ b/Walkies.Web/Views/Map/DogWalker.cshtml
@@ -29,8 +29,8 @@
         <div id="navbar">
             <ul>
                 <li><a href="@Url.Content("~/Home/Index")">Home</a></li>
-                <li><a href="@Url.Content("~/Shelter/Shelter")">Shelter</a></li>
-                <li><a href="@Url.Content("~/Map/MapPage")">Map</a></li>
+                <li><a href="@Url.Content("~/Shelter/Index")">Shelter</a></li>
+                <li><a href="@Url.Content("~/Map/Index")">Map</a></li>
                 <li><a href="@Url.Content("~/Map/DogWalker")">Walker Tracker</a></li>
             </ul>
         </div>
