--- a/Walkies.Web/Views/Map/DogWalker.cshtml
+++ b/Walkies.Web/Views/Map/DogWalker.cshtml
@@ -1,6 +1,17 @@
 ﻿@{
     ViewData["Title"] = "DogWalker - Walkies";
 }
+@model Walkies.Common.Models.DisplayData
+@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
+
+<script src="https://maps.google.com/maps/api/js?key=AIzaSyDOw295U3cQjE-c8n0V0u-CN10-mqnuM24" type="text/javascript"></script>
+<style>
+    #map_canvas img {
+        max-width: none;
+    }
+</style>
+
 <html>
 <head>
     <meta charset="utf-8">
@@ -92,9 +103,7 @@
 
                 </div>
             </section>
-            <div class="google-maps">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.863682909094!2d-111.84830038433226!3d40.765022842306465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87525f8d9a1c0b85%3A0xaa04b77f6d1b2c25!2s200+Central+Campus+Dr%2C+Salt+Lake+City%2C+UT+84112!5e0!3m2!1sen!2sus!4v1536447531479" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
+            <div id="map_canvas" class="z-depth-1 map-container" style="height: 820px"></div>
         </div>
         <footer><a href="@Url.Content("~/Home/Help")">Help</a></footer>
         <!--<footer>
@@ -114,3 +123,80 @@
     </div>
 </body>
 </html>
+
+@section scripts {
+    <section class="scripts">
+        <script type="text/javascript">
+            $(document).ready(function () {
+                Initialize();
+            });
+            var map;
+
+            var address = "@Model.City" + ", " + "@Model.StateCode";
+            $.ajax({
+                url: "https://maps.googleapis.com/maps/api/geocode/json?address=AIzaSyDOw295U3cQjE-c8n0V0u-CN10-mqnuM24"+ address + "&sensor=false&key=",
+                type: "POST",
+                success: function (res) {
+                    console.log(res.results[0].geometry.location.lat);
+                    console.log(res.results[0].geometry.location.lng);
+                }
+            });
+
+            function Initialize() {
+                google.maps.visualRefresh = true;
+                var SaltLakeCity = new google.maps.LatLng(40.758701, -111.876183);
+                var mapOptions = {
+                    zoom: 13,
+                    center: SaltLakeCity,
+                    mapTypeId: google.maps.MapTypeId.G_NORMAL_MAP,
+                    gestureHandling: 'greedy'
+                };
+
+                map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
+                ProcessData();
+            }
+
+            function ProcessData() {
+                @foreach (var item in Model.Shelters)
+                {
+                    <text>
+                    createMarker('@item.Latitude', '@item.Longitude', '@item.Name', '@item.Street1', '@item.City', '@item.StateCode', '@item.Zip');
+                    </text>
+                }
+            }
+
+            function createMarker(lat, lon, name, street, city, statecode, zip) {
+                marker = new google.maps.Marker({
+                    draggable: false,
+                    animation: google.maps.Animation.DROP,
+                    position: new google.maps.LatLng(lat, lon, false),
+                    title: name,
+                    map: map,
+                    icon: 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png'
+                });
+                createInfoWindow(marker, name, street, city, statecode, zip);
+            }
+
+            function createInfoWindow(m, name, street, city, statecode, zip) {
+                var infowindow = new google.maps.InfoWindow({
+                        content: "<div class='infoDiv'>" +
+                            "<h2>" + name + "</h2>" +
+                            "<div><h4>" + street + "</h4></div>" +
+                            "<div><h4>" + city + ",</h4></div>" +
+                        "<div><h4>" + statecode + " " + zip +"</h4></div>" +
+                        "</div>"
+                });
+
+                google.maps.event.addListener(m, 'mouseover', function () {
+                    infowindow.open(map, m);
+                });
+
+                google.maps.event.addListener(marker, 'mouseout', function () {
+                    infowindow.close(map, m);
+                });
+            }
+        </script>
+    </section>
+}
+
+
