--- a/Walkies.Web/Views/Account/LoginRegister.cshtml
+++ b/Walkies.Web/Views/Account/LoginRegister.cshtml
@@ -39,15 +39,15 @@
                         </h5>
                         <hr>
                         <h2>Sign Up to Walk</h2>
-                        <form>
+                        <form method="post">
                             <div class="form-group">
-                                <label for="name1"></label>
-                                <input type="name" class="form-control" id="name" aria-describedby="name" placeholder="First Name">
+                                <label for="name1">name</label>
+                                <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="First Name">
                                 <small id="name1" class="form-text text-muted"></small>
                             </div>
                             <div class="form-group">
                                 <label for="name2"></label>
-                                <input type="name2" class="form-control" id="name2" aria-describedby="name" placeholder="Last Name">
+                                <input type="text" class="form-control" id="name2" aria-describedby="name" placeholder="Last Name">
                                 <small id="name_last" class="form-text text-muted"></small>
                             </div>
                             <div class="form-group">
@@ -57,18 +57,17 @@
                             </div>
                             <div class="form-group">
                                 <label for="Phone"></label>
-                                <input type="phone" class="form-control" id="Phone" aria-describedby="phone" placeholder="Phone">
+                                <input type="tel" class="form-control" id="Phone" aria-describedby="phone" placeholder="Phone">
                                 <small id="phone" class="form-text text-muted"></small>
                             </div>
                             <div class="form-group">
                                 <label for="Password"></label>
-                                <input type="password" class="form-control" id="password" aria-describedby="password" placeholder="Password">
+                                <input type="text" class="form-control" id="password" aria-describedby="password" placeholder="Password" required>
                                 <small id="password1" class="form-text text-muted"></small>
                             </div>
                             <p></p>
-                            <a href="@Url.Content("~/Home/Index")">
-                                <button type="submit" class="Submit">Submit</button>
-                            </a>
+                            <a href="@Url.Content("~/Home/Index")"></a>
+                            <button type="submit" class="Submit">Submit</button>
                         </form>
 
                         <ul>
