Added in User Auth and User Database to Admin Page

--- a/Walkies.Admin/Views/Shared/_Layout.cshtml
+++ b/Walkies.Admin/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Shelter" asp-action="Index">Shelters & Associated Dogs</a></li>
+                    <li><a asp-area="" asp-controller="Login" asp-action="Index">Account Management</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
