--- a/Walkies.Admin/Views/Login/Create.cshtml
+++ b/Walkies.Admin/Views/Login/Create.cshtml
@@ -13,16 +13,6 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AccountUserId" class="control-label"></label>
-                <input asp-for="AccountUserId" class="form-control" />
-                <span asp-validation-for="AccountUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="UserTypeCode" class="control-label"></label>
                 <input asp-for="UserTypeCode" class="form-control" />
                 <span asp-validation-for="UserTypeCode" class="text-danger"></span>
@@ -53,27 +43,7 @@
                 <span asp-validation-for="PasswordHash" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CanLogin" class="control-label"></label>
-                <input asp-for="CanLogin" class="form-control" />
-                <span asp-validation-for="CanLogin" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IsLockedDateTime" class="control-label"></label>
-                <input asp-for="IsLockedDateTime" class="form-control" />
-                <span asp-validation-for="IsLockedDateTime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ResetToken" class="control-label"></label>
-                <input asp-for="ResetToken" class="form-control" />
-                <span asp-validation-for="ResetToken" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ResetTokenExpiration" class="control-label"></label>
-                <input asp-for="ResetTokenExpiration" class="form-control" />
-                <span asp-validation-for="ResetTokenExpiration" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <button class="btn btn-primary" type="submit" name="submitAction" value="Create"><i class="glyphicon glyphicon-plus"></i> Sign Up</button>
             </div>
         </form>
     </div>
