--- a/Walkies.Admin/Views/Login/Edit.cshtml
+++ b/Walkies.Admin/Views/Login/Edit.cshtml
@@ -8,31 +8,38 @@
 
 <h4>AccountUser</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="LoginEmail" class="control-label"></label>
-                <input asp-for="LoginEmail" class="form-control" />
-                <span asp-validation-for="LoginEmail" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PasswordHash" class="control-label"></label>
-                <input asp-for="PasswordHash" class="form-control" />
-                <span asp-validation-for="PasswordHash" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </form>
+<hr />
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <form method="post" class="form-horizontal">
+                @if (@Model.AccountUserId != Guid.Empty)
+                {
+                    <input type="hidden" name="shelterId" value="@Model.AccountUserId">
+                }
+                <div class="form-group">
+                    <label asp-for="LoginEmail" class="control-label col-md-2"></label>
+                    <div class="col-md-4">
+                        <input asp-for="LoginEmail" class="form-control" required />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="PasswordHash" class="control-label col-md-2"></label>
+                    <div class="col-md-4">
+                        <input asp-for="PasswordHash" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <br><br />
+                        <button class="btn btn-primary" type="submit" name="submitAction" value="Login"><i class="glyphicon glyphicon-plus"></i> Login</button>
+                    </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
