--- a/Walkies.Admin/Views/Shelter/Edit.cshtml
+++ b/Walkies.Admin/Views/Shelter/Edit.cshtml
@@ -46,7 +46,7 @@
                 <div class="form-group">
                     <label asp-for="Phone" class="control-label col-md-2"></label>
                     <div class="col-md-4">
-                        <input asp-for="Phone" class="form-control" />
+                        <input asp-for="Phone" type="tel" class="form-control" />
                     </div>
                 </div>
                 <div class="form-group">
