--- a/Walkies.Web/Views/Account/LoginRegister.cshtml
+++ b/Walkies.Web/Views/Account/LoginRegister.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Login Register - Walkies";
+    ViewData["Title"] = "Login - Walkies";
 }
+@model Walkies.Common.Models.AccountUser
 <html>
 <head>
     <meta charset="utf-8">
