--- a/Walkies.Admin/Views/Login/Create.cshtml
+++ b/Walkies.Admin/Views/Login/Create.cshtml
@@ -13,38 +13,45 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="UserTypeCode" class="control-label"></label>
-                <input asp-for="UserTypeCode" class="form-control" />
-                <span asp-validation-for="UserTypeCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LoginEmail" class="control-label"></label>
-                <input asp-for="LoginEmail" class="form-control" />
-                <span asp-validation-for="LoginEmail" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RecoveryPhone" class="control-label"></label>
-                <input asp-for="RecoveryPhone" class="form-control" />
-                <span asp-validation-for="RecoveryPhone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PasswordHash" class="control-label"></label>
-                <input asp-for="PasswordHash" class="form-control" />
-                <span asp-validation-for="PasswordHash" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <button class="btn btn-primary" type="submit" name="submitAction" value="Create"><i class="glyphicon glyphicon-plus"></i> Sign Up</button>
-            </div>
+                <label class="control-label col-md-2">State</label>
+                <div class="col-md-4">
+                    <select asp-for="UserTypeCode" class="form-control" required>
+                        <option selected disabled="disabled">Select State</option>
+                        <option value="ADM">Admin</option>
+                        <option value="USR">User</option>
+                        <option value="STR">Strict</option>
+                        <option value="SHEL">Shelter</option>
+                        <option value="MD">Mod</option>
+                        </select>
+                    </div>
+                <div class="form-group">
+                    <label asp-for="FirstName" class="control-label"></label>
+                    <input asp-for="FirstName" class="form-control" />
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="LastName" class="control-label"></label>
+                    <input asp-for="LastName" class="form-control" />
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="LoginEmail" class="control-label"></label>
+                    <input asp-for="LoginEmail" class="form-control" />
+                    <span asp-validation-for="LoginEmail" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="RecoveryPhone" class="control-label"></label>
+                    <input asp-for="RecoveryPhone" class="form-control" />
+                    <span asp-validation-for="RecoveryPhone" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="PasswordHash" class="control-label"></label>
+                    <input asp-for="PasswordHash" class="form-control" />
+                    <span asp-validation-for="PasswordHash" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary" type="submit" name="submitAction" value="Create"><i class="glyphicon glyphicon-plus"></i> Sign Up</button>
+                </div>
         </form>
     </div>
 </div>
