--- a/Walkies.Web/Views/Account/Login.cshtml
+++ b/Walkies.Web/Views/Account/Login.cshtml
@@ -40,36 +40,35 @@
                         </h5>
                         <hr>
                         <h2>Sign Up to Walk</h2>
-                        <form method="post">
-                            <div class="form-group">
-                                <label for="name1">name</label>
-                                <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="First Name">
-                                <small id="name1" class="form-text text-muted"></small>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <form method="post" class="form-horizontal">
+                                        @if (@Model.AccountUserId != Guid.Empty)
+                                        {
+                                            <input type="hidden" name="accountUserId" value="@Model.AccountUserId">
+                                        }
+                                        <div class="form-group">
+                                            <label asp-for="LoginEmail" class="control-label col-md-2"></label>
+                                            <div class="col-md-4">
+                                                <input asp-for="LoginEmail" class="form-control" required />
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label asp-for="PasswordHash" class="control-label col-md-2"></label>
+                                            <div class="col-md-4">
+                                                <input asp-for="PasswordHash" class="form-control" />
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <br><br />
+                                            <button class="btn btn-primary" type="submit"><i class="glyphicon glyphicon-plus"></i> Login</button>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label for="name2"></label>
-                                <input type="text" class="form-control" id="name2" aria-describedby="name" placeholder="Last Name">
-                                <small id="name_last" class="form-text text-muted"></small>
-                            </div>
-                            <div class="form-group">
-                                <label for="Email"></label>
-                                <input type="email" class="form-control" id="Email" aria-describedby="email" placeholder="Email">
-                                <small id="email" class="form-text text-muted"></small>
-                            </div>
-                            <div class="form-group">
-                                <label for="Phone"></label>
-                                <input type="tel" class="form-control" id="Phone" aria-describedby="phone" placeholder="Phone">
-                                <small id="phone" class="form-text text-muted"></small>
-                            </div>
-                            <div class="form-group">
-                                <label for="Password"></label>
-                                <input type="text" class="form-control" id="password" aria-describedby="password" placeholder="Password" required>
-                                <small id="password1" class="form-text text-muted"></small>
-                            </div>
-                            <p></p>
-                            <a href="@Url.Content("~/Home/Index")"></a>
-                            <button type="submit" class="Submit">Submit</button>
-                        </form>
+                            <button class="btn btn-primary" name="submitAction" value="Cancel" onclick="window.location.href='@Url.Content("~/")/Account/Register'"><i class="glyphicon"></i> Signup for New Account</button>
+                        </div>
 
                         <ul>
                             <!-- List of links under menuset 1 -->
